# llama-idx

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: 1-embeddings.py  2-summary.py  3-web-app.py  agent.py  data.py  database.py  debug.py  knowledge_tool.py  main.py  models.py  prompts.py  query_tool.py  schema.py  vector_index.py  web-app.py
