[project]
name = "llama1"
version = "0.1.0"
description = ""
authors = [
    {name = "Taras Makitra",email = "makitrataras@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.14"
dependencies = [
    "llama-index (>=0.12.40,<0.13.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "llama-index-readers-file (>=0.4.8,<0.5.0)",
    "llama-index-vector-stores-postgres (>=0.5.3,<0.6.0)",
#    "llama-index-llms-ollama (>=0.6.1,<0.7.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
#    "llama-index-embeddings-ollama (>=0.6.0,<0.7.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "kagglehub[pandas-datasets] (>=0.3.12,<0.4.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "arize-phoenix (>=10.10.0,<11.0.0)",
    "arize-phoenix-otel (>=0.10.3,<0.11.0)",
    "openinference-instrumentation-llama-index (>=4.3.0,<5.0.0)",
    "llama-index-tools-yahoo-finance (>=0.3.0,<0.4.0)"
]

[tool.poetry]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.black]
line-length = 88